test_regress/t/t_mod_interface_clocking_bad.out
%Error: t/t_mod_interface_clocking_bad.v:25:10: Couldn't resolve symbol: 'cb'
   25 |     x.cb.reset <= 1;
      |          ^~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
